Fix the big gap after header

--- a/css/testtab.css
+++ b/css/testtab.css
@@ -511,8 +511,8 @@ header .intro-text .intro-heading {
 }
 @media (min-width: 768px) {
   header .intro-text {
-    padding-top: 150px;
-    padding-bottom: 200px;
+    padding-top: 100px;
+    /* padding-bottom: 200px; */
   }
   header .intro-text .intro-lead-in {
     /*font-family: "Droid Serif", "Helvetica Neue", Helvetica, Arial, sans-serif;*/
